# bc

./: .gitignore  Angles.cpp  Angles.hpp  BridgeCommand.cbp  BridgeCommand.depend  BridgeCommand.layout  Buoy.cpp  Buoy.hpp  Buoys.cpp  Buoys.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CompilingLinuxAndMac.txt  Constants.hpp  DefaultEventReceiver.cpp  DefaultEventReceiver.hpp  ExitMessage.cpp  FFTWave.cpp  FFTWave.hpp  GUIMain.cpp  GUIMain.hpp  GUIRectangle.cpp  GUIRectangle.hpp  HeadingIndicator.cpp  HeadingIndicator.h  HelloWorld.cpp  IniFile.cpp  IniFile.hpp  LICENSE  LICENSE.txt  LandLights.cpp  LandLights.hpp  LandObject.cpp  LandObject.hpp  LandObjects.cpp  LandObjects.hpp  Lang.cpp  Leg.hpp  Light.cpp  (+107 more)
controller/: AISData.hpp  AISOverUDP.cpp  AISOverUDP.hpp  CMakeLists.txt  ControllerModel.cpp  ControllerModel.hpp  EventReceiver.cpp  EventReceiver.hpp  GUI.cpp  GUI.hpp  Makefile  Network.cpp  Network.hpp  OtherShipDataStruct.hpp  PositionDataStruct.hpp  ShipDataStruct.hpp  controller.cbp  language.txt  main.cpp  map.ini
libs/Irrlicht/: CMakeLists.txt  changesForBC.txt
libs/Irrlicht/irrlicht-1.8.1/: changes.txt  readme.txt
libs/Irrlicht/irrlicht-1.8.4/: changes.txt  readme.txt
libs/Irrlicht/irrlicht-svn/: changes.txt
libs/enet/: CMakeLists.txt  callbacks.c  compress.c  enet.h  host.c  list.c  packet.c  peer.c  protocol.c  protocol.h  unix.c  unix.h  win32.c
libs/enet/enet-1.3.11/: Makefile.in  configure  enet.lib  enet64.lib  enet_dll.depend  enet_dll.layout
multiplayerHub/: CMakeLists.txt  Makefile  MultiplayerHub.cbp  Network.cpp  Network.hpp  ScenarioChoice.cpp  ShipPositions.cpp  ShipPositions.hpp  StartupEventReceiver.cpp  main.cpp
repeater/: CMakeLists.txt  ControllerModel.cpp  ControllerModel.hpp  EventReceiver.cpp  GUI.cpp  GUI.hpp  Makefile  MakefileForDeb  Network.cpp  Network.hpp  ShipDataStruct.hpp  main.cpp  repeater.cbp
src/: AIS.cpp  AIS.hpp  Angles.cpp  Angles.hpp  Autopilot.cpp  Autopilot.hpp  AzimuthDial.cpp  AzimuthDial.h  BCDynamicMeshBuffer.h  BCIndexBuffer.h  BCTerrainSceneNode.cpp  BCTerrainSceneNode.h  BCTerrainTriangleSelector.cpp  BCTerrainTriangleSelector.h  BCVertexBuffer.h  BridgeCommand.cbp  Buoy.cpp  Buoy.hpp  Buoys.cpp  Buoys.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ChartReader.cpp  ChartReader.hpp  Collision.cpp  Collision.hpp  CompilingLinuxAndMac.txt  Constants.hpp  ControlVisualiser.cpp  ControlVisualiser.hpp  DefaultEventReceiver.cpp  DefaultEventReceiver.hpp  Engine.cpp  Engine.hpp  ExitMessage.cpp  ExitMessage.hpp  FFTWave.cpp  FFTWave.hpp  GUIMain.cpp  (+129 more)
src/EnetServer/: CMakeLists.txt  com.cpp  com.h  comstatus.cpp  comstatus.h  fsm.cpp  fsm.h  main.cpp  message.cpp  message.h  miscstatus.h  readme  thread.cpp  thread.h
src/Visual Studio 2017 solution/: Bridge Command.sln  bridgecommand-bc.vcxproj  bridgecommand-ed.vcxproj  bridgecommand-ini.vcxproj  bridgecommand-mc.vcxproj  bridgecommand-mh.vcxproj  bridgecommand-rp.vcxproj  bridgecommand.vcxproj  useVSdll.bat
src/Visual Studio 2017 solution for XP/: bridgecommand-bc.vcxproj  bridgecommand-ed.vcxproj  bridgecommand-ini.vcxproj  bridgecommand-mc.vcxproj  bridgecommand-mh.vcxproj  bridgecommand-rp.vcxproj  bridgecommand.vcxproj
src/Visual Studio solution/: Aegir Styra.sln  Bridge Command.sln  aegirstyra-ini.vcxproj  aegirstyra.vcxproj  bridgecommand-bc.vcxproj  bridgecommand-ed.vcxproj  bridgecommand-es.vcxproj  bridgecommand-ini.vcxproj  bridgecommand-mc.vcxproj  bridgecommand-mh.vcxproj  bridgecommand-rp.vcxproj  bridgecommand.vcxproj
src/chartConverter/: CMakeLists.txt  main.cpp
src/controller/: AISData.hpp  AISOverUDP.cpp  AISOverUDP.hpp  CMakeLists.txt  ControllerModel.cpp  ControllerModel.hpp  EventReceiver.cpp  EventReceiver.hpp  GUI.cpp  GUI.hpp  MakefileForDeb  Network.cpp  Network.hpp  OtherShipDataStruct.hpp  PositionDataStruct.hpp  ShipDataStruct.hpp  controller.cbp  main.cpp
src/editor/: CMakeLists.txt  ControllerModel.cpp  ControllerModel.hpp  EventReceiver.cpp  EventReceiver.hpp  GUI.cpp  GUI.hpp  GeneralDataStruct.hpp  ImportExportGUI.cpp  ImportExportGUI.hpp  MakefileForDeb  OtherShipDataStruct.hpp  OwnShipDataStruct.hpp  PositionDataStruct.hpp  ShipDataStruct.hpp  StartupEventReceiver.cpp  StartupEventReceiver.hpp  editor.cbp  main.cpp
src/graphics/: ICameraNode.hpp  ILightNode.hpp  IMeshNode.hpp  IRenderer.hpp  ISceneManager.hpp  ISceneNode.hpp  Types.hpp
src/graphics/irrlicht/: IrrlichtCameraNode.hpp  IrrlichtLightNode.hpp  IrrlichtMeshNode.hpp  IrrlichtRenderer.hpp  IrrlichtSceneManager.hpp  IrrlichtSceneNode.hpp
src/graphics/wicked/: WickedImGui.cpp  WickedImGui.hpp  WickedKelvinWake.cpp  WickedKelvinWake.hpp  WickedModelImporter.cpp  WickedModelImporter.hpp  WickedMultiCascadeOcean.cpp  WickedMultiCascadeOcean.hpp  WickedMultiView.cpp  WickedMultiView.hpp  WickedOceanSpectrum.hpp  WickedRenderer.cpp  WickedRenderer.hpp  WickedSceneManager.hpp  WickedSceneNode.hpp  WickedTerrainNode.cpp  WickedTerrainNode.hpp  WickedVRView.cpp  WickedVRView.hpp  WickedWater.cpp  WickedWater.hpp
src/gui/: ImGuiOverlay.cpp  ImGuiOverlay.hpp
src/iniEditor/: CMakeLists.txt  MakefileForDeb  iniEditor.cbp  main.cpp
src/launcher/: CMakeLists.txt  MakefileForDeb  launcher.cbp  main.cpp
src/libs/Irrlicht/: CMakeLists.txt  changesForBC.txt
src/libs/OpenHMD/: BuildNotes.txt
src/libs/serial/impl/: win.h
src/multiplayerHub/: CMakeLists.txt  EventReceiver.cpp  EventReceiver.hpp  LinesData.cpp  LinesData.hpp  MakefileForDeb  MultiplayerHub.cbp  Network.cpp  Network.hpp  ScenarioChoice.cpp  ScenarioChoice.hpp  ShipPositions.cpp  ShipPositions.hpp  StartupEventReceiver.cpp  StartupEventReceiver.hpp  main.cpp
src/repeater/: CMakeLists.txt  ControllerModel.cpp  ControllerModel.hpp  EventReceiver.cpp  EventReceiver.hpp  GUI.cpp  GUI.hpp  MakefileForDeb  Network.cpp  Network.hpp  PositionDataStruct.hpp  ShipDataStruct.hpp  main.cpp  repeater.cbp
src/tests/: CMakeLists.txt  test_angles.cpp  test_chart_reader.cpp  test_heightmap_generator.cpp  test_legacy_physics.cpp  test_mmg_physics.cpp  test_stubs.cpp  test_utilities.cpp  test_world_generator.cpp
(+2002 files in other folders)
